--- a/Xevle.Logging.csproj
+++ b/Xevle.Logging.csproj
@@ -8,6 +8,8 @@
     <RootNamespace>Xevle.Logging</RootNamespace>
     <AssemblyName>Xevle.Logging</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
